# gatekeepify

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements-server.txt  requirements.txt  ruff.toml  supervisord.conf
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_social_tables.py  003_audit_log.py  004_image_urls.py  005_award_snapshots.py  006_sync_model_drift.py  007_listens_user_ts_index.py
app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
app/routers/: auth.py  awards.py  backfill.py  discover.py  friends.py  gatekeep.py  search.py  stats.py
app/services/: activity.py  anomaly.py  audit.py  awards.py  compatibility.py  ingestion.py  lastfm.py  observability.py  ratelimit.py  spotify.py
db/: database.db
env/: pyvenv.cfg
frontend/: .env.local.example  .eslintignore  capacitor.config.ts  eslint.config.mjs  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json
scripts/: migrate_sqlite.py
src/: Database.py  SpotifyClient.py  constants.py  cron.py  cron_load_unknown_tracks.py  cron_recent_listens.py  main.py  spotify_client.py  utils.py
src/db/: Database.py  constants.py
src/menu_listener/: display_utils.py  menu_listener.py  menu_options.py  progress_bar.py  spinner.py
src/spotify/: Album.py  Artist.py  (+5 more)
tests/: test_backfill_data_loader.py  test_database.py  test_menu_listener.py  test_spotify_client.py  test_stat_viewer.py  test_types.py
(+54 files in other folders)
